fixed some typos

--- a/icmake/doc/icmake.1
+++ b/icmake/doc/icmake.1
@@ -1,5 +1,3 @@
-)
-.PP 
 .TH "icmake" "1" "1992\-2016" "icmake\&.9\&.00\&.00\&.tar\&.gz" "A program maintenance utility"
 
 .PP 
@@ -498,7 +496,7 @@ file \fIb\fP\&. E\&.g\&., \fI\(dq\&source\&.cc\(dq\& newer \(dq\&source\&.o\(dq\
 do not have to exist: if both don\(cq\&t exist 0 is returned; if \fIb\fP doesn\(cq\&t
 exist, 1 is returned; if \fIa\fP doesn\(cq\&t exist 0 is returned; if they are
 equally old 0 is returned\&. (the \fIexists()\fP predefined function (see below,
-section \fBPREDEFINED FUNCTIONS\fP) can be used to test explicity whether a file
+section \fBPREDEFINED FUNCTIONS\fP) can be used to test explicitly whether a file
 exists)\&.
 .IP 
 .IP o 
@@ -666,7 +664,7 @@ Inside the condition a variable may be defined and initialized\&.
 .br 
 A complementary  \fIdo \&.\&.\&. while()\fP statement is not available\&. Note
 that defining a variable, using an initialization expression means
-that the intialization expressing is executed at each iteration of the
+that the initialization expressing is executed at each iteration of the
 \fIwhile\fP statement\&. So the following statement will never end, and
 will display a never ending stream of values 10:
 .nf 
